Correction of overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,6 @@ body {
 }
 
 /* allow dragged items to escape clipping */ 
-.lane, .lane .card-body {
+.lane {
   overflow: visible; 
 } 
